--- a/app/src/main/res/layout/card_class_details_identification.xml
+++ b/app/src/main/res/layout/card_class_details_identification.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_general_details"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp">
@@ -38,6 +38,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:paddingBottom="8dp"
             android:textColor="@color/secondaryText"
             android:fontFamily="@font/roboto_medium"
             android:textSize="12sp"
