--- a/app/src/main/res/layout/card_class_details_draft_class.xml
+++ b/app/src/main/res/layout/card_class_details_draft_class.xml
@@ -7,6 +7,9 @@
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:layout_marginTop="4dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp">
 
