--- a/app/src/main/res/layout/card_class_details_draft_class.xml
+++ b/app/src/main/res/layout/card_class_details_draft_class.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_general_details"
+    android:id="@+id/card_draft_class"
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:layout_marginTop="4dp"
