--- a/app/src/main/res/layout/card_class_details_prev_and_next.xml
+++ b/app/src/main/res/layout/card_class_details_prev_and_next.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_general_details"
+    android:id="@+id/card_prev_next"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -76,6 +76,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_show_all_classes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorAccent"
