--- a/app/src/main/res/layout/activity_class_details.xml
+++ b/app/src/main/res/layout/activity_class_details.xml
@@ -50,4 +50,16 @@
             <include layout="@layout/card_class_details_grades"/>
         </LinearLayout>
     </ScrollView>
+
+    <!--
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_alignParentBottom="true"/>
+    -->
 </RelativeLayout>
