--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -16,6 +16,14 @@
             android:positiveButtonText="@null"
             android:summary="@string/pref_sync_frequency_enabled"
             android:title="@string/pref_sync_frequency"/>
+
+        <CheckBoxPreference
+            android:enabled="false"
+            android:defaultValue="false"
+            android:key="automatic_class_miss"
+            android:title="@string/pref_detect_missed_auto"
+            android:summaryOff="@string/pref_detect_missed_auto_disabled"
+            android:summaryOn="@string/pref_detect_missed_auto_enabled"/>
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -70,7 +78,7 @@
         <CheckBoxPreference
             android:icon="@drawable/ic_back_accent_30dp"
             android:key="double_back"
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:title="@string/pref_double_back"
             android:summaryOn="@string/pref_double_back_on"
             android:summaryOff="@string/pref_double_back_off"/>
