--- a/app/src/main/res/layout/card_class_details_prev_and_next.xml
+++ b/app/src/main/res/layout/card_class_details_prev_and_next.xml
@@ -77,14 +77,13 @@
 
         <TextView
             android:id="@+id/tv_show_all_classes"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorAccent"
             android:fontFamily="@font/roboto_regular"
             android:layout_marginTop="16dp"
-            android:textAlignment="center"
+            android:layout_gravity="center_horizontal"
             android:text="@string/all_classes"/>
-
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
