--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -235,6 +235,30 @@
                 android:textColor="@color/primaryText"
                 android:textSize="14sp"
                 android:text="@string/creator"/>
+
+            <!-- Credits! -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                android:textSize="16sp"
+                android:text="@string/credits"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="20dp"
+                android:textColor="@color/primaryText"
+                android:textSize="14sp"
+                android:text="@string/credits_string"/>
         </LinearLayout>
 
     </ScrollView>
