--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,95 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.forcetower.uefs.activity.LoginActivity">
 
-    <ImageView
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/ll_login_root"
-        android:layout_marginBottom="36dp"
-        android:src="@drawable/uefs_logo"
-        android:contentDescription="@string/app_name"/>
-
-    <LinearLayout
-        android:id="@+id/ll_login_root"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp">
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/username_form"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/roboto_regular"
-                android:textColor="@color/primaryText"
-                android:hint="@string/form_username"
-                android:singleLine="true"/>
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_regular"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/password_form"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/primaryText"
-                android:hint="@string/form_password"
-                android:inputType="textPassword"
-                android:singleLine="true"/>
-        </android.support.design.widget.TextInputLayout>
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:onClick="login"
-            android:background="@color/colorAccent"
-            android:fontFamily="@font/roboto_regular"
-            android:textAllCaps="false"
-            android:text="@string/login_btn"/>
-    </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/about_app"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/login_progress"
-        android:text="@string/click_to_know_about"
-        android:textAlignment="center"
-        android:fontFamily="@font/roboto_regular"
-        android:layout_centerHorizontal="true"
-        android:textSize="14sp"
-        android:onClick="about"
-        android:textColor="@color/primaryText"/>
-
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
-        android:indeterminate="true"
-        android:visibility="invisible"/>
-
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
