--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.forcetower.uefs.activity.LoginActivity">
+    tools:context="com.forcetower.uefs.view.login.LoginActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container"
