--- a/app/src/main/res/layout/fragment_login_form.xml
+++ b/app/src/main/res/layout/fragment_login_form.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.forcetower.uefs.fragments.LoginFormFragment">
+    tools:context="com.forcetower.uefs.view.login.LoginFormFragment">
 
     <ImageView
         android:id="@+id/iv_frame_top_large"
