--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -8,12 +8,22 @@
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_messages_black_24dp"
         android:title="@string/title_messages"/>
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications"/>
+        android:id="@+id/navigation_grades"
+        android:icon="@drawable/ic_grades_black_24dp"
+        android:title="@string/title_grades"/>
+
+    <item
+        android:id="@+id/navigation_disciplines"
+        android:icon="@drawable/ic_book_open_black_24dp"
+        android:title="@string/title_grades"/>
+
+    <item
+        android:id="@+id/navigation_calendar"
+        android:icon="@drawable/ic_calendar_black_24dp"
+        android:title="@string/title_calendar"/>
 
 </menu>
