--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_clock_black_24dp"
         android:title="@string/title_schedule"/>
 
     <item
@@ -19,7 +19,7 @@
     <item
         android:id="@+id/navigation_disciplines"
         android:icon="@drawable/ic_book_open_black_24dp"
-        android:title="@string/title_grades"/>
+        android:title="@string/title_disciplines"/>
 
     <item
         android:id="@+id/navigation_calendar"
