--- a/app/src/main/res/layout/message_list_item_new.xml
+++ b/app/src/main/res/layout/message_list_item_new.xml
@@ -80,6 +80,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/roboto_regular"
+        android:textColor="@color/secondaryText"
         android:textSize="12sp"
         android:paddingBottom="8dp"
         tools:text="Secretaria Academica"/>
