--- a/app/src/main/res/layout/list_grade_partial_mean.xml
+++ b/app/src/main/res/layout/list_grade_partial_mean.xml
@@ -11,6 +11,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@id/tv_partial_mean"
+        android:layout_toStartOf="@id/tv_partial_mean"
         android:textSize="12sp"
         android:textColor="@color/colorPrimary"
         android:fontFamily="@font/roboto_medium"
