--- a/app/src/main/res/layout/fragment_grades_of_semester.xml
+++ b/app/src/main/res/layout/fragment_grades_of_semester.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:gravity="center"
             android:textColor="@color/colorPrimary"
             android:fontFamily="@font/roboto_regular"
             android:textSize="18sp"
