--- a/app/src/main/res/layout/activity_class_details.xml
+++ b/app/src/main/res/layout/activity_class_details.xml
@@ -1,66 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/light_gray"
-    android:animateLayoutChanges="true"
-    tools:context="com.forcetower.uefs.view.class_details.ClassDetailsActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:layout_alignParentTop="true">
-    </android.support.v7.widget.Toolbar>
-
-    <ScrollView
-        android:id="@+id/sv_details_root"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar">
-
-        <LinearLayout
-            android:orientation="vertical"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:paddingBottom="8dp"
-            android:clipToPadding="false">
+            android:background="@color/colorPrimary">
+        </android.support.v7.widget.Toolbar>
 
-            <ProgressBar
-                android:id="@+id/progress_bar_load_details"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:visibility="gone"
-                android:indeterminate="true"/>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:tabSelectedTextColor="@color/white">
+        </android.support.design.widget.TabLayout>
+    </android.support.design.widget.AppBarLayout>
 
-            <include android:id="@+id/draft_card" layout="@layout/card_class_details_draft_class"/>
-            <include android:id="@+id/identification_card" layout="@layout/card_class_details_identification"/>
-            <include android:id="@+id/details_card" layout="@layout/card_class_details_general"/>
-            <include android:id="@+id/missed_card" layout="@layout/card_class_details_misses"/>
-            <include android:id="@+id/classes_pn_card" layout="@layout/card_class_details_prev_and_next"/>
-            <include layout="@layout/card_class_details_grades"/>
-            <include android:id="@+id/class_day_and_time_card" layout="@layout/card_class_details_classes_time"/>
-        </LinearLayout>
-    </ScrollView>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/fragment_container"
+        android:layout_below="@id/app_bar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-    <!--
     <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/fab_activity_action"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_alignParentBottom="true"/>
-    -->
+        android:clickable="true"
+        android:focusable="true"
+        app:srcCompat="@drawable/ic_create_black_24dp"
+        android:tint="@color/white"
+        app:elevation="6dp"/>
+
 </RelativeLayout>
