--- a/app/src/main/res/layout/fragment_to_do_list.xml
+++ b/app/src/main/res/layout/fragment_to_do_list.xml
@@ -13,7 +13,12 @@
         android:layout_height="wrap_content"
         app:cardElevation="2dp"
         app:cardCornerRadius="2dp"
-        android:layout_margin="8dp">
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -43,6 +48,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_todo_list"
                 android:layout_marginTop="8dp"
+                android:layout_marginStart="48dp"
+                android:layout_marginLeft="48dp"
+                android:maxLines="1"
                 android:textColor="@color/primaryText"
                 android:textSize="13sp"
                 android:fontFamily="@font/roboto_regular"
@@ -51,12 +59,14 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_todo_list"
                 android:layout_below="@id/sw_show_options"
+                android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </android.support.v7.widget.RecyclerView>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+    <!--
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add_new_task"
         android:layout_width="56dp"
@@ -67,7 +77,11 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:focusable="true"
+        android:clickable="true"
         app:srcCompat="@drawable/ic_add_black_24dp"
         android:tint="@color/white"
         app:elevation="6dp"/>
+        -->
+
 </RelativeLayout>
