--- a/app/src/main/res/layout/fragment_to_do_list.xml
+++ b/app/src/main/res/layout/fragment_to_do_list.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view_to_do_list_root"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:cardElevation="2dp"
         app:cardCornerRadius="2dp"
         android:layout_marginTop="4dp"
