--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -39,6 +39,7 @@
         android:layout_height="0dp"
         android:hint="@string/suggestion"
         android:inputType="text|textMultiLine|textCapSentences"
+        android:gravity="top"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
