--- a/app/src/main/res/menu/connected.xml
+++ b/app/src/main/res/menu/connected.xml
@@ -9,4 +9,10 @@
         android:orderInCategory="1"
         android:title="@string/settings"
         app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/menu_class_review"
+        android:icon="@drawable/ic_flask_white_24dp"
+        android:title="@string/class_review"
+        app:showAsAction="ifRoom"/>
 </menu>
