--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -124,6 +124,7 @@
             android:orientation="vertical">
 
             <include layout="@layout/card_calendar_option"/>
+            <include layout="@layout/card_enrollment_download"/>
             <include layout="@layout/card_update_control"/>
             <include layout="@layout/card_good_barrel"/>
 
