--- a/app/src/main/res/layout/card_enrollment_download.xml
+++ b/app/src/main/res/layout/card_enrollment_download.xml
@@ -80,10 +80,12 @@
         <ProgressBar
             android:id="@+id/pb_download_enrollment_cert"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
+            android:layout_height="8dp"
             style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
             tools:progress="50"
             android:visibility="invisible"
+            tools:visibility="visible"
+            android:indeterminate="true"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 
