--- a/app/src/main/res/layout/fragment_schedule_new.xml
+++ b/app/src/main/res/layout/fragment_schedule_new.xml
@@ -5,14 +5,24 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_schedule"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="8dp"
-        android:clipToPadding="false"
-        android:visibility="visible">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        app:cardElevation="2dp"
+        app:cardCornerRadius="2dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingBottom="8dp"
+            android:clipToPadding="false">
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v7.widget.CardView>
 
     <ScrollView
         android:id="@+id/vg_no_schedule"
