--- a/app/src/main/res/layout/item_schedule_day.xml
+++ b/app/src/main/res/layout/item_schedule_day.xml
@@ -5,11 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginEnd="8dp"
+    android:layout_margin="4dp"
     app:cardElevation="2dp"
     app:cardCornerRadius="2dp">
 
