Finishing last details

--- a/app/src/main/res/layout/fragment_schedule_new.xml
+++ b/app/src/main/res/layout/fragment_schedule_new.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/sv_schedule"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -25,7 +25,6 @@
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:paddingBottom="8dp"
                     android:clipToPadding="false">
                 </android.support.v7.widget.RecyclerView>
@@ -35,13 +34,11 @@
                 android:id="@+id/rv_schedule_subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:paddingBottom="8dp"
                 android:clipToPadding="false">
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
-
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
     <ScrollView
         android:id="@+id/vg_no_schedule"
